# parallel-hnsw

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  README.txt  run.py
src/: CMakeLists.txt  MANIFEST.in  pyproject.toml  requirements.txt  setup.py
src/chm/: Benchmark.cpp  Benchmark.hpp  Dataset.cpp  Dataset.hpp  DistanceFunction.cpp  DistanceFunction.hpp  Index.cpp  Index.hpp  RecallTable.cpp  RecallTable.hpp  distances.hpp  euclideanDistance.hpp  innerProduct.hpp
src/config/: datasetGeneratorConfig.json
src/executables/: Dataset.py  benchmark.cpp  bindings.cpp  datasetGenerator.py  recallTable.cpp
src/scripts/: SIMDCapability.py  bindingsTest.py  buildProject.py  clean.py  formatCMakeTemplates.py  plot.py  plotSmall.py  requirements.txt  testModule.py
src/templates/: CMake.txt  groupPlots.txt
